--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.2.1",
     "@smastrom/react-rating": "^1.3.1",
     "icomoon-react": "^3.0.0",
     "react": "^18.2.0",
@@ -29,7 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "prettier-plugin-organize-imports": "^3.2.2",
-    "styled-components": "^6.0.0-rc.3",
+    "styled-components": "^6.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
